--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 services:
   postgres:
     image: postgres:latest
@@ -7,13 +7,25 @@ services:
     volumes:
       - 'postgres:/var/lib/postgresql/data'
     ports:
-      - "5432:5432"
+      - "5433:5432"  # Thay đổi cổng này nếu cần
   redis:
     image: redis:latest
     ports:
-      - "6379:6379"
+      - "6380:6379"  # Thay đổi cổng này nếu cần
     volumes:
       - 'redis:/data'
+  web:
+    build: .
+    command: ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
+    volumes:
+      - .:/rails
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
+    environment:
+      RAILS_MASTER_KEY: "09a419d8ab3b52e4ca7c6c330986e348"
 
 volumes:
   redis:
